--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
+    "ruff>=0.14.8",
     "sqlmodel>=0.0.24",
     "uv>=0.8.17",
     "uvicorn[standard]>=0.35.0",
