Première app prototype avec posts (pas de register, pas de création de groupes)

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,16 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "argon2-cffi>=25.1.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
-    "passlib[argon2]>=1.7.4",
+    "passlib>=1.7.4",
     "psycopg2>=2.9.10",
     "pydantic-settings>=2.10.1",
+    "pydantic[email]>=2.11.7",
     "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
-    "ruff>=0.14.8",
+    "ruff>=0.14.10",
     "sqlmodel>=0.0.24",
     "uv>=0.8.17",
     "uvicorn[standard]>=0.35.0",
