--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+# Claude conf
+.claude/ 
+
 # C extensions
 *.so
 
@@ -205,3 +208,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# SSL/TLS Certificates (Let's Encrypt)
+certbot/
+nginx/logs/
+*.pem
+*.key
+*.crt
+*.csr
+
+# Temporary nginx configs
+nginx/*.tmp
