--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
+    "python-magic>=0.4.27",
     "python-multipart>=0.0.20",
     "ruff>=0.14.10",
     "sqlmodel>=0.0.24",
