--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,8 @@ DB_DATABASE=db_closo_app
 SECRET_KEY=CHANGE_ME_GENERATE_SECRET_KEY
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Configuration Stripe
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
